@startuml CalculadoraPila_ClassDiagram

!define ABSTRACT_CLASS_COLOR #FFE6E6
!define INTERFACE_COLOR #E6F3FF
!define CLASS_COLOR #E6FFE6

hide empty members
skinparam backgroundColor #FFFFFF
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #333333

' Interfaz Stack
interface Stack<T> {
    {abstract} +push(element: T): void
    {abstract} +pop(): T
    {abstract} +peek(): T
    {abstract} +isEmpty(): boolean
    {abstract} +size(): int
}

' Excepciones
exception EmptyStackException {
    +EmptyStackException()
    +EmptyStackException(message: String)
}

exception CalculationException {
    +CalculationException()
    +CalculationException(message: String)
    +CalculationException(message: String, cause: Throwable)
}

' Clase Vector - Implementación de Stack
class Vector<T> {
    -{INITIAL_CAPACITY: int}
    -elements: T[]
    -size: int
    --
    +Vector()
    +push(element: T): void
    +pop(): T
    +peek(): T
    +isEmpty(): boolean
    +size(): int
    -expandCapacity(): void
    +getCapacity(): int
}

' Clase PostfixCalculator
class PostfixCalculator {
    -stack: Stack<Integer>
    --
    +PostfixCalculator(stack: Stack<Integer>)
    +evaluate(expression: String): int
    -isOperator(token: String): boolean
    -isOperand(token: String): boolean
    -evaluateOperation(operator: String): void
}

' Clase Main
class Main {
    -{DATA_FILE: String}
    --
    +{static} main(args: String[]): void
    -{static} processFile(calculator: PostfixCalculator): void
}

' Relaciones
Stack <|.. Vector : implements >
Vector --> EmptyStackException : throws

PostfixCalculator --> Stack : uses
PostfixCalculator --> CalculationException : throws
PostfixCalculator --> EmptyStackException : throws

Main --> PostfixCalculator : uses
Main --> Vector : creates

note right of Stack
    Interfaz genérica <T>
    Define el contrato para
    operaciones de pila
end note

note right of Vector
    Implementación con array dinámico
    T[] que se expande automáticamente
    cuando se necesita más espacio
end note

note right of PostfixCalculator
    Evaluador de expresiones postfix
    Independiente de la implementación
    de Stack que use
end note

@enduml
